// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-by-id-referenced-descendants should get references to descendant media items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"id":"fc6456a1-3243-4947-b49b-49d2dfa110e3"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-descendants should handle media with no descendants 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-descendants should handle non-existent media ID 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-descendants should return empty when media folder has no referenced descendants 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;
